fix: fixed screen overlap for user commnets

--- a/src/modules/User/User.scss
+++ b/src/modules/User/User.scss
@@ -136,5 +136,10 @@
                 }
             }
         }
+        &--comment{
+            max-width: 960px;
+            margin:2rem auto;
+            padding: 2rem 2rem 2rem 3rem;
+        }
     }
 }
